--- a/W3.CSS 4.15.css
+++ b/W3.CSS 4.15.css
@@ -302,7 +302,7 @@ a.topnav-localicons {font-size:20px !important;padding-top:6px !important;paddin
 #sidenav a.activesub:hover,#sidenav a.activesub:active {background-color:#ccc;color:#000;}
 #leftmenuinner {position:fixed;top:0;padding-bottom:0;height:100%;width:250px;background-color:transparent;}
 #leftmenuinnerinner {height:100%;width:100%;background-color:#E7E9EB;overflow-y:scroll;overflow-x:hidden;padding-top:20px;}
-#main {/*! padding:16px; */margin-top:90px;}
+#main {/*! padding:16px; *//*! margin-top:90px; */}
 #mainLeaderboard {height:90px}
 #right {text-align:center;padding:16px 16px 0 0;margin-top:90px;}
 #right a {text-decoration:none}
